fix alignment of default mc dir textfield in settings

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -680,6 +680,10 @@
 	-fx-pref-width: 240;
 }
 
+.settings-dialog-pane .file-text-field {
+	-fx-padding: 8 0 0 0;
+}
+
 /*---------- Transparent Stage ----------*/
 
 .transparent-stage-content {
